@@ -11,6 +11,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -21,7 +22,7 @@ public class MemberServiceImpl implements MemberService {
     private final UserLikedMemberRepository userLikedMemberRepository;
 
     @Override
-    public List<MemberResponseDto> getMembersByGroupId(Long groupId) {
+    public List<MemberResponseDto> getMembersByGroupId(Long userId, Long groupId) {
         if (groupId == null) {
             throw new GeneralException(ErrorStatus.GROUP_NAME_REQUIRED);
         }
@@ -32,15 +33,27 @@ public class MemberServiceImpl implements MemberService {
         }
 
         List<Member> members = memberRepository.findByGroupId(groupId);
-
         if (members.isEmpty()) {
             throw new GeneralException(ErrorStatus.MEMBER_NOT_FOUND);
         }
 
+        // 🔥 사용자가 관심 등록한 멤버 ID 리스트 조회
+        List<UserLikedMember> likedMembers = userLikedMemberRepository.findByUserIdAndGroupId(userId, groupId);
+        Set<Long> likedMemberIds = likedMembers.stream()
+                .map(UserLikedMember::getMemberId)
+                .collect(Collectors.toSet());
+
+
+        // 🔥 전체 멤버에 대해 관심 여부 매핑해서 응답
         return members.stream()
-                .map(m -> new MemberResponseDto(m.getMemberId(), m.getName()))
+                .map(m -> new MemberResponseDto(
+                        m.getMemberId(),
+                        m.getName(),
+                        likedMemberIds.contains(m.getMemberId())  // 관심 여부 체크
+                ))
                 .collect(Collectors.toList());
     }
+
 
     @Override
     public List<MemberResponseDto> getLikedMembersByGroupId(Long userId, Long groupId) {
@@ -59,14 +72,19 @@ public class MemberServiceImpl implements MemberService {
             throw new GeneralException(ErrorStatus.MEMBER_NOT_FOUND);
         }
 
-        List<Long> memberIds = likedMembers.stream()
+        // 관심 멤버 ID 리스트
+        List<Long> likedMemberIds = likedMembers.stream()
                 .map(UserLikedMember::getMemberId)
-                .collect(Collectors.toList());
+                .toList();
 
-        List<Member> members = memberRepository.findAllById(memberIds);
+        List<Member> members = memberRepository.findAllById(likedMemberIds);
 
         return members.stream()
-                .map(m -> new MemberResponseDto(m.getMemberId(), m.getName()))
+                .map(m -> new MemberResponseDto(
+                        m.getMemberId(),
+                        m.getName(),
+                        true   // 🔥 여기선 무조건 true
+                ))
                 .collect(Collectors.toList());
     }
 }
